update mentors sections | fix alignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -232,3 +232,8 @@ blockquote cite:before {
     min-height:250px;
   }
 }
+.mentor-links a{
+  font-size:20px;
+  margin: 0 3px;
+  text-decoration: none !important;
+}
